--- a/styles/hero.css
+++ b/styles/hero.css
@@ -7,7 +7,7 @@
   padding-top: 3.5rem;
 }
 
-.hero-container img {
-  flex: 1;
-  object-fit: cover;
+.hero-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
