--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,12 @@ h1 {
   font-size: 6rem;
 }
 
+h2 {
+  font-weight: 500;
+  font-size: 3.5rem;
+  line-height: 1.1;
+}
+
 p {
   font-size: 1.2rem;
 }
