--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,13 +1,17 @@
 .blog {
-  padding: 2rem 8rem;
+  padding: 2rem 10rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.blog img {
+  width: 5rem;
+}
+
 .blog h1 {
-  font-weight: 600;
-  font-size: 2rem;
+  font-weight: 500;
+  font-size: 2.5rem;
   margin-bottom: 0.8rem;
   line-height: 1.1;
 }
@@ -21,8 +25,8 @@
 
 .wrapper > button {
   background: #91908f;
-  height: 2.5rem;
-  min-width: 2.5rem;
+  height: 3rem;
+  min-width: 3rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -38,11 +42,11 @@
 }
 
 .btn-left {
-  margin-right: 4.5rem;
+  margin-right: 5.5rem;
 }
 
 .btn-right {
-  margin-left: 4.5rem;
+  margin-left: 5.5rem;
 }
 
 .wrapper i {
@@ -64,41 +68,50 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 8px;
+  border-radius: 10px;
   border: 2px solid rgb(213, 213, 212);
-  padding: 1.5rem;
+  padding: 2rem;
   list-style: none;
   text-align: center;
   scroll-snap-align: start;
 }
 
 .card img {
-  width: 28rem;
+  width: 100%;
   object-fit: cover;
-  border-radius: 5px;
-  border: 4px solid rgba(205, 205, 205, 0.6);
+  border-radius: 12px;
+  border: 5px solid rgba(205, 205, 205, 0.4);
   margin-bottom: 2.5rem;
 }
 
 .card time {
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   color: #ff8700;
-  font-weight: 600;
+  font-weight: 500;
   margin-bottom: 0.8rem;
 }
 
 .card h4 {
-  font-size: 1.4rem;
-  font-weight: 600;
+  font-size: 2rem;
+  font-weight: 500;
   margin: 0rem 4rem;
-  margin-bottom: 0.8rem;
+  margin-bottom: 1.5rem;
+  line-height: 1.3;
 }
 
 .card p {
-  font-size: 1.2rem;
+  font-size: 1.42rem;
+  font-weight: 400;
+  color: #616161;
+  margin-bottom: 2rem;
+  padding: 0 2.5rem;
+}
+
+.card button {
+  text-transform: uppercase;
+  padding: 0.7rem 1.5rem;
+  font-size: 1.1rem;
   font-weight: 600;
-  color: #444444;
-  margin-bottom: 1.5rem;
 }
 
 .carousel.dragging {
