--- a/styles/index.css
+++ b/styles/index.css
@@ -22,7 +22,7 @@ h2 {
 }
 
 p {
-  font-size: 1.2rem;
+  font-size: 1.8rem;
 }
 
 strong {
@@ -33,6 +33,7 @@ strong {
   border: solid black 1.7px;
   background: transparent;
   border-radius: 0.7rem;
+  transition: 0.5s;
 }
 
 .primary-button a {
@@ -45,7 +46,7 @@ strong {
 }
 
 .primary-button:hover {
-  border: none;
+  border: solid transparent 1.7px;
   color: white;
   background: var(--main-orange);
 }
@@ -55,14 +56,14 @@ strong {
   font-weight: 500;
   font-style: normal;
   color: #ff8700;
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   margin-bottom: 1rem;
 }
 
 /* About */
 .about {
   display: flex;
-  padding: 5rem;
+  padding: 8rem;
   gap: 3.5rem;
 }
 
@@ -76,50 +77,72 @@ strong {
 }
 
 .about-container img {
-  width: 5rem;
+  width: 6rem;
 }
 
 .about-container h1 {
   font-weight: 500;
-  font-size: 3.5rem;
+  font-size: 4.5rem;
   margin-bottom: 0.8rem;
   line-height: 1.1;
 }
 
 .about-container p {
-  font-size: 0.9rem;
+  font-size: 1.25rem;
   line-height: 1.9;
+}
+
+.about-btn {
+  border: solid rgb(0, 0, 0, 0.7) 2px;
+  border-radius: 0.5rem;
+  display: inline-block;
+  font-family: "Fira Sans Condensed";
+  font-size: 1.7rem;
+  text-decoration: none;
+  color: var(--p-text);
+  padding: 0.7rem 1.6rem;
+  margin-top: 1.5rem;
+  width: 8.5rem;
+  text-align: center;
+  transition: 0.5s;
+}
+
+.about-btn:hover {
+  border: solid transparent 2px;
+  color: white;
+  background: var(--main-orange);
 }
 
 /* Special Offer */
 .special-offer {
-  padding-left: 9rem;
-  padding-top: 5rem;
-  padding-bottom: 3rem;
+  padding: 4.5rem 11rem;
   background-image: url("../static/Specialoffer.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
   height: 42vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .special-offer h6 {
   color: black;
   margin-bottom: 0;
-  transform: translate(0, 1rem);
+  transform: translate(0, 0.8rem);
 }
 
 .special-offer h1 {
   font-weight: 700;
-  font-size: 5rem;
+  font-size: 7rem;
   color: #ff8700;
 }
 
 .special-offer p {
-  font-size: 1.2rem;
+  font-size: 1.65rem;
   color: #444444;
-  margin-bottom: 2rem;
+  margin-bottom: 1.8rem;
   width: 38%;
-  font-weight: 600;
+  font-weight: 400;
   transform: translate(0, -0.5rem);
 }
 
@@ -134,8 +157,9 @@ strong {
   color: #444444;
   border-radius: 5px;
   background: white;
-  font-weight: 600;
+  font-weight: 400;
   transition: 0.5s;
+  font-size: 1.4rem;
 }
 
 .offer-buttons a:hover {
@@ -145,15 +169,15 @@ strong {
 
 .button,
 .boo-op-container a {
-  padding: 0.6rem 2.2rem;
+  padding: 0.7rem 2.2rem;
   color: white;
   background: #ff8700;
   border: none;
-  border-radius: 5px;
-  font-weight: 600;
+  border-radius: 8px;
+  font-weight: 400;
   transition: 0.5s;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 1.3rem;
   text-decoration: none;
 }
 
