--- a/styles/our-location.css
+++ b/styles/our-location.css
@@ -1,4 +1,6 @@
 .our-location {
+  background-image: url(../static/location-background.png);
+  background-size: 100% 100%;
   padding: 7rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
