--- a/styles/hero.css
+++ b/styles/hero.css
@@ -36,15 +36,57 @@
 }
 
 .hero-card {
+  position: relative;
   border-radius: 0.7rem;
 }
 
 .hero-card img {
   width: 100%;
+  height: 100%;
   border-radius: 0.7rem;
   object-fit: cover;
 }
 
-.hero-card img:hover {
+.hero-card div {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  width: 80%;
+  height: 80%;
+}
+
+.hero-card:hover::before {
+  content: "";
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.8);
+  top: 10%;
+  left: 10%;
+  border-radius: 0.7rem;
+  width: 80%;
+  height: 80%;
+}
+
+.hero-card div h5 {
+  font-size: 2rem;
+}
+
+.hero-card div button {
+  border: 0.5px gray solid;
+  border-radius: 0.2rem;
+  background-color: white;
+  padding: 0.2rem 0.4rem;
+  cursor: pointer;
+}
+
+.hero-card:hover > img {
   border: 2px var(--main-orange) solid;
+}
+
+.hero-card:hover > div {
+  display: flex;
 }
