--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -1,20 +1,27 @@
 .reviews {
   display: flex;
+  overflow-x: hidden;
+}
+
+.reviews div {
+  display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100dvw;
+  height: 70vh;
   background-image: url(../static/review-background.png);
   background-size: 100% 100%;
-  height: 70vh;
+  background-repeat: no-repeat;
   padding-top: 4rem;
 }
 
-.reviews hr {
+.reviews div hr {
   color: black;
   width: 12%;
   margin-block: 1rem;
 }
 
-.reviews p {
+.reviews div p {
   text-align: center;
 }
 
