Scale finished and JS

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,15 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #0c0d0c;
+  background-image: url(../static/footer.jpeg);
   padding-top: 5rem;
-  gap: 2rem;
+  gap: 3.5rem;
+}
+
+.footer img {
+  width: 10%;
 }
 
 .footer ul {
   display: flex;
   justify-content: center;
-  gap: 1rem;
+  gap: 3rem;
 }
 
 .footer ul li {
@@ -20,6 +24,8 @@
 .footer ul li a {
   color: white;
   text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: 300;
 }
 
 .footer p {
@@ -29,4 +35,6 @@
   font: inherit;
   width: 100%;
   text-align: center;
+  font-size: 1.2rem;
+  font-weight: 3 00;
 }
