--- a/styles/hero.css
+++ b/styles/hero.css
@@ -12,12 +12,19 @@
 .hero-left {
   padding-left: 7rem;
   padding-top: 3.5rem;
+  img {
+    width: 12%;
+  }
 }
 
 .hero-p {
   padding-left: 1rem;
   margin-top: 1rem;
+  padding-right: 8rem;
   margin-bottom: 4rem;
+  p {
+    font-size: 1.4rem;
+  }
 }
 
 .hero-buttons-container {
@@ -25,6 +32,7 @@
   display: flex;
   gap: 1rem;
   margin-bottom: 3.5rem;
+  margin-top: 7rem;
 }
 
 .hero-cards-container {
@@ -45,42 +53,40 @@
   height: 100%;
   border-radius: 0.7rem;
   object-fit: cover;
+  border: 2px transparent solid;
+  transition: 0.5s;
 }
 
 .hero-card div {
-  display: none;
+  display: flex;
+  scale: 0;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 1rem;
   position: absolute;
-  top: 10%;
-  left: 10%;
-  width: 80%;
-  height: 80%;
-}
-
-.hero-card:hover::before {
-  content: "";
-  position: absolute;
-  background-color: rgba(255, 255, 255, 0.8);
-  top: 10%;
-  left: 10%;
+  top: 15%;
+  left: 12.5%;
+  width: 75%;
+  height: 70%;
+  transition: 0.5s;
+  background-color: rgba(255, 255, 255, 0.7);
   border-radius: 0.7rem;
-  width: 80%;
-  height: 80%;
 }
 
 .hero-card div h5 {
-  font-size: 2rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
 .hero-card div button {
-  border: 0.5px gray solid;
+  border: none;
   border-radius: 0.2rem;
   background-color: white;
-  padding: 0.2rem 0.4rem;
+  padding: 0.3rem 0.5rem;
   cursor: pointer;
+  font-size: 0.9rem;
 }
 
 .hero-card:hover > img {
@@ -88,5 +94,5 @@
 }
 
 .hero-card:hover > div {
-  display: flex;
+  scale: 1;
 }
