--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Sofia&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -185,4 +189,38 @@ strong {
 .boo-op-container a:hover {
   opacity: 0.8;
   transform: scale(1.08);
+}
+
+.food-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.9rem;
+  padding: 1.7rem 2.5rem;
+  background: #f1efef;
+  border-radius: 8px;
+}
+
+.rating {
+  color: orange;
+}
+
+.food-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.food-info h5 {
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #444444;
+}
+
+.food-info p {
+  font-size: 1.3rem;
+  font-weight: 400;
+  color: white;
+  background: #ff8700;
+  padding: 0.2rem 0.6rem;
+  border-radius: 4px;
 }
