--- a/styles/our-chefs.css
+++ b/styles/our-chefs.css
@@ -20,6 +20,7 @@
   box-shadow: -52px 28px 99px -25px rgba(0, 0, 0, 0.73);
   border-radius: 0.7rem;
   padding: 1.5rem;
+  background-color: white;
 }
 
 .chef-card img {
